# urldoc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/application/: cert_parser.rs  config.rs  generate_report.rs  mod.rs  url_parser.rs
src/domain/: cert.rs  error.rs  http.rs  mod.rs  redirect.rs  report.rs  target.rs  timing.rs  tls.rs
src/infrastructure/: clock.rs  dns.rs  http.rs  mod.rs  renderer.rs  tcp.rs  tls.rs
src/ports/: clock.rs  dns.rs  http.rs  io.rs  mod.rs  renderer.rs  tcp.rs  tls.rs
