[package]
name = "udoc"
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
description = "Connection diagnostics for URLs: DNS/TCP/TLS/TTFB timings + HTTP/2 + cert summary + redirects"
license = "MIT"
repository = "https://github.com/enthropy7/urldoc"
homepage = "https://github.com/enthropy7/urldoc"
readme = "README.md"
keywords = ["http", "tls", "dns", "curl", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "udoc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
ring = "0.17"
webpki-roots = "0.26"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
bytes = "1"
hickory-resolver = "0.24"
url = "2"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "tls12", "ring", "logging"] }
tokio-rustls = "0.26"
x509-parser = "0.16"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
